--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <script>
+  if (location.hostname === 'ozgeozer.me') {
+    location.replace('https://www.ozgeozer.me' + location.pathname + location.search + location.hash);
+  }
+</script>
+
   <head>
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
