--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </script>
 
   <head>
+    <link rel="preload" href="script.js" as="script">
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
